package keeper

import (
	"context"

	sdk "github.com/cosmos/cosmos-sdk/types"
	"github.com/stafihub/stafihub/x/mining/types"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

func (k Keeper) MaxStakeItemNumber(goCtx context.Context, req *types.QueryMaxStakeItemNumberRequest) (*types.QueryMaxStakeItemNumberResponse, error) {
	if req == nil {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	ctx := sdk.UnwrapSDKContext(goCtx)

	return &types.QueryMaxStakeItemNumberResponse{
		Number: k.GetMaxStakeItemNumber(ctx),
	}, nil
}
